--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 ktor {
     deployment {
-        port = 8080
+        port = 8081
     }
     application {
-        modules = [ com.lastmile.ApplicationKt.module ]
+        modules = [ aseca.lastmile.ApplicationKt.module ]
     }
 }
